@@ -291,6 +291,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.22.1</version>
                         <configuration>
+                            <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                             <useSystemClassLoader>false</useSystemClassLoader>
                         </configuration>
                     </plugin>
